# Frigatify

./: .gitignore  Cargo.toml  README.md  config.toml  frigatify.service
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_and_release.yml
src/: main.rs  notify.rs
src/notify/: display_image.rs
