[package]
name = "frigatify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
rumqttc = "0.23.0"
serde = "1.0.193"
serde_json = "1.0"
bytes = "1.0"
dirs = "5.0.1"
config = "0.13.4"
log = "0.4.20"
image = "0.24.7"
show-image = "0.13.1"
ureq = "2.9.1"
