[package]
name = "frigatify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
rumqttc = "0.24.0"
serde = "1.0.193"
serde_json = "1.0"
bytes = "1.0"
dirs = "5.0.1"
config = "0.14.0"
log = "0.4.20"
ureq = "2.9.1"
env_logger = "0.11.0"
imagesize = "0.13.0"
[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["image"]
